samples/_failures_safe/1761345104_51846f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19416a03.c: In function ‘main’:
./samples/SAFE/__tmp_19416a03.c:157:12: error: missing terminating " character
  157 |     printf("\nMatrix Multiplication:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_19416a03.c:157:5: error: expected expression at end of input
  157 |     printf("\nMatrix Multiplication:\
      |     ^~~~~~
./samples/SAFE/__tmp_19416a03.c:157:5: error: expected declaration or statement at end of input
